# quake3-bot

./: .flake8  .gitignore  README.md  docker-compose.yml  example.env  pyproject.toml
.github/workflows/: ci.yml
bot/: Dockerfile  __main__.py  config.py  my_bot.py  quake3_bot.py
bot/cogs/commands/: hello.py  help.py  owner.py  quake3_server.py
bot/cogs/core/: database.py  events.py
bot/data/: quake3.py
bot/migrations/models/: 0_20221019191829_init.py  1_20221017084156_None.py  1_20230216185433_update.py
bot/models/: __init__.py  base_discord_model.py  base_model.py  base_timestamped_model.py  command_execution.py  discord_guild.py  discord_user.py  quake3_server.py  user_server_configuration.py
bot/utils/: code.py  interactions.py  setup.py  text.py  trigrams.py
migrations/models/: 0_20221016114947_init.py
